--- a/roles/software/tasks/vscode.yml
+++ b/roles/software/tasks/vscode.yml
@@ -157,7 +157,7 @@
         - vscodevim.vim
         - yzhang.markdown-all-in-one
       args:
-        executable: /bin/bash
+        executable: /bin/zsh
       register: vscode_extensions
       changed_when: "'already installed' not in vscode_extensions.stdout"
   when: ansible_os_family == "Darwin" or system_type.stdout == "desktop"
