--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -3,9 +3,11 @@
   loop:
     - zsh.yml
     - cli_tools.yml
+    - git.yml
     - dotfiles.yml
     - ssh_key.yml
     - tmux.yml
     - vim.yml
     - desktop_wallpaper.yml
     - profile_picture.yml
+    - keybindings.yml
