--- a/roles/common/tasks/zsh.yml
+++ b/roles/common/tasks/zsh.yml
@@ -97,7 +97,7 @@
     path: '{{ ansible_env.HOME }}/.zshrc'
     marker: '# {mark} ANSIBLE MANAGED BLOCK: Homebrew'
     block: |
-      eval "$(/opt/homebrew/bin/brew shellenv)"
+      eval "$(/usr/bin/env brew shellenv)"
       export PATH="$(brew --prefix)/sbin:$PATH"
       source "$(brew --prefix)/share/zsh-autosuggestions/zsh-autosuggestions.zsh"
     create: yes
