--- a/roles/software/tasks/browser.yml
+++ b/roles/software/tasks/browser.yml
@@ -27,7 +27,7 @@
       apt:
         name: brave-browser
         state: present
-  when: ansible_facts['os_family'] == 'Debian'
+  when: ansible_facts['os_family'] == 'Debian' and type_of_system == 'desktop'
 
 # RedHat
 - block:
@@ -48,7 +48,7 @@
       dnf:
         name: brave-browser
         state: present
-  when: ansible_facts['os_family'] == 'RedHat'
+  when: ansible_facts['os_family'] == 'RedHat' and type_of_system == 'desktop'
 
 - name: Set Brave as the default browser | Not macOS
   block:
@@ -64,4 +64,4 @@
       args:
         executable: /bin/zsh
       when: "'brave' not in current_browser.stdout | lower"
-  when: ansible_facts['os_family'] in ['Debian', 'RedHat']
+  when: ansible_facts['os_family'] in ['Debian', 'RedHat'] and type_of_system == 'desktop'
