--- a/roles/common/tasks/profile_picture.yml
+++ b/roles/common/tasks/profile_picture.yml
@@ -1,34 +1,3 @@
-# macOS
-- name: Set user profile picture | macOS
-  when: ansible_facts['os_family'] == "Darwin"
-  block:
-    - name: Ensure destination directory exists | macOS
-      file:
-        path: '{{ ansible_env.HOME }}/Pictures'
-        state: directory
-        mode: '0755'
-        owner: '{{ ansible_user }}'
-        group: '{{ ansible_user }}'
-
-    - name: Copy profile picture to user's Pictures directory | macOS
-      copy:
-        src: '{{ role_path }}/files/profile_picture.png'
-        dest: '{{ ansible_env.HOME }}/Pictures/profile_picture.png'
-        mode: '0644'
-        owner: '{{ ansible_user }}'
-        group: '{{ ansible_user }}'
-
-    - name: Get current profile picture path | macOS
-      shell: dscl . -read ~/ Picture | awk '{print $2}'
-      register: current_profile_picture
-      changed_when: false
-      ignore_errors: true
-
-    - name: Set profile picture using AppleScript | macOS
-      shell: |
-        osascript -e 'tell application "System Events" to set picture of every desktop to POSIX file "{{ ansible_env.HOME }}/Pictures/profile_picture.png"'
-      when: current_profile_picture.stdout != "{{ ansible_env.HOME }}/Pictures/profile_picture.png"
-
 # Debian
 - name: Set user profile picture | Debian
   when: ansible_facts['os_family'] == "Debian"
@@ -38,8 +7,8 @@
         src: '{{ role_path }}/files/profile_picture.png'
         dest: '{{ ansible_env.HOME }}/.face'
         mode: '0644'
-        owner: '{{ ansible_user }}'
-        group: '{{ ansible_user }}'
+        owner: '{{ ansible_user_id }}'
+        group: '{{ ansible_user_id }}'
         become: true
 
 # RedHat
@@ -62,7 +31,7 @@
     - name: Copy profile picture to AccountsService icons | RedHat
       copy:
         src: '{{ role_path }}/files/profile_picture.png'
-        dest: '/var/lib/AccountsService/icons/{{ ansible_user }}'
+        dest: '/var/lib/AccountsService/icons/{{ ansible_user_id }}'
         mode: '0644'
         owner: 'root'
         group: 'root'
@@ -70,16 +39,16 @@
 
     - name: Check if AccountsService user file exists
       stat:
-        path: '/var/lib/AccountsService/users/{{ ansible_user }}'
+        path: '/var/lib/AccountsService/users/{{ ansible_user_id }}'
       register: accounts_service_file
       become: true
 
     - name: Create user configuration file for AccountsService | RedHat
       copy:
-        dest: '/var/lib/AccountsService/users/{{ ansible_user }}'
+        dest: '/var/lib/AccountsService/users/{{ ansible_user_id }}'
         content: |
           [User]
-          Icon=/var/lib/AccountsService/icons/{{ ansible_user }}
+          Icon=/var/lib/AccountsService/icons/{{ ansible_user_id }}
         mode: '0644'
         owner: 'root'
         group: 'root'
